# mbc-gym

./: .gitignore  README.md  pyproject.toml
migrations/versions/: d44d420fdde3_.py  d7adc6944ffb_.py  efd66645af52_.py
src/: main.py
src/config/: config.py
src/domain/auth/: forms.py  views.py
src/domain/auth/templates/auth/: base.html  index.html  login.html
src/domain/detector/: __init__.py  forms.py  models.py  views.py
src/domain/detector/templates/detector/: 404.html  500.html  base.html  index.html  upload.html
src/domain/user/: __init__.py  forms.py  models.py  views.py
src/domain/user/templates/user/: base.html  index.html  signup.html
src/templates/: base.html
tests/: conftest.py  test_sample.py
tests/detector/: test_view.py
