[project]
name = "mbcgym"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "black==25.11.0",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "opencv-python>=4.12.0.88",
    "pytest==9.0.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
